# lily-preview

./: Cargo.toml  README.md
crates/editor-host/: Cargo.toml
crates/editor-host/src/: lib.rs  macos.rs
crates/lilypalooza-audio/: Cargo.toml
crates/lilypalooza-audio/benches/: engine_block_costs.rs  strip_balance_meter.rs
crates/lilypalooza-audio/src/: engine.rs  instrument.rs  lib.rs  mixer.rs
crates/lilypalooza-audio/src/engine/: tests.rs
crates/lilypalooza-audio/src/instrument/: metronome_synth.rs  registry.rs
crates/lilypalooza-audio/src/mixer/: runtime.rs
crates/lilypalooza-builtins/examples/: open_soundfont_synth.rs
crates/lilypalooza-builtins/src/: gain_effect.rs  soundfont_synth.rs
crates/lilypalooza-clap/: Cargo.toml
crates/lilypalooza-clap/src/: lib.rs
crates/lilypalooza-egui-baseview/src/: lib.rs
crates/lilypalooza-plugin-scan/: Cargo.toml
crates/lilypalooza-plugin-scan/src/: lib.rs
crates/lilypalooza-plugin-validator/: Cargo.toml
crates/lilypalooza-plugin-validator/src/: lib.rs
crates/lilypalooza-vst3/: Cargo.toml
crates/lilypalooza-vst3/src/: lib.rs
src/: app.rs  error_prompt.rs  main.rs  plugin_scan.rs  settings.rs
src/app/: messages.rs  mixer.rs  processor_editor_windows.rs  update.rs
src/app/update/: files.rs  input.rs  mixer.rs  persistence.rs
